--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,36 @@
 {
-    "autoload": {
-        "psr-4": {
-            "Flarum\\Facebook\\": "src/"
+    "name": "flarum/auth-facebook",
+    "description": "Allow users to log in with Facebook.",
+    "type": "flarum-extension",
+    "keywords": ["authentication"],
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Toby Zerner",
+            "email": "toby.zerner@gmail.com"
         }
+    ],
+    "support": {
+        "issues": "https://github.com/flarum/core/issues",
+        "source": "https://github.com/flarum/auth-facebook"
     },
     "require": {
+        "flarum/core": "^0.1.0-beta.3",
         "league/oauth2-facebook": "~1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Flarum\\Auth\\Facebook\\": "src/"
+        }
+    },
+    "extra": {
+        "flarum-extension": {
+            "title": "Facebook",
+            "icon": {
+                "name": "facebook",
+                "backgroundColor": "#3b5998",
+                "color": "#fff"
+            }
+        }
     }
 }
