Adapt to FontAwesome v5.0.6 icon name changes

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "flarum-extension": {
             "title": "Facebook Login",
             "icon": {
-                "name": "facebook",
+                "name": "fab fa-facebook",
                 "backgroundColor": "#3b5998",
                 "color": "#fff"
             }
