--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "flarum/core": "^0.1.0-beta.8",
-        "league/oauth2-facebook": "~1.0"
+        "league/oauth2-facebook": "^2.0"
     },
     "autoload": {
         "psr-4": {
