--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "flarum/flarum-ext-auth-facebook",
+    "name": "flarum/auth-facebook",
     "description": "Allow users to log in with Facebook.",
     "type": "flarum-extension",
     "keywords": ["authentication"],
@@ -12,7 +12,7 @@
     ],
     "support": {
         "issues": "https://github.com/flarum/core/issues",
-        "source": "https://github.com/flarum/flarum-ext-auth-facebook"
+        "source": "https://github.com/flarum/auth-facebook"
     },
     "require": {
         "flarum/core": "^0.1.0-beta.8",
