--- a/js/package.json
+++ b/js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@flarum/flarum-ext-auth-facebook",
+  "name": "@flarum/auth-facebook",
   "version": "0.0.0",
   "dependencies": {
     "flarum-webpack-config": "0.1.0-beta.9",
